<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.securecell.Main">

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@drawable/ic_action_lock_open"
        app:showAsAction="ifRoom|withText"/>
    
    <item android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
          android:title="@string/more"
          app:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/action_share"
                  android:title="@string/share"
                  app:showAsAction="ifRoom|withText" />
            
            <item android:id="@+id/action_parameters"
                  android:title="@string/action_settings"
                  app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:onClick="Parameters"
          android:showAsAction="never"/>
</menu>
